# wtf-windows

./: .gitignore  .gitmodules  .repokit.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  aggregator.json  demo_render.py  extract_tool_result.py  install-hooks.sh  paths.sh  pyproject.toml  pyproject.toml.comfyui  pyproject.toml.pypi
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  release.yml
config/: wtf.schema.json
docs/: manifest-reference.md  mode-system.md  writing-a-diagnostic-tool.md
docs/tools/core/: README.md  locked.md  restarted.md
hooks/: pre-push
kits/: core.kit.json
scripts/: README.md  build_demo.py  gh_issue_full.py  gh_sub_issues.py  safe_move.sh  search_sesslog.py  sync-versions.py  update-version.sh
scripts/.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release-template.md
scripts/.github/ISSUE_TEMPLATE/: bug-report.md
scripts/.github/workflows/: ci.yml
scripts/hooks/: post-commit  pre-commit  pre-push
scripts/private/claude/commits/: commit_v0.1.0_initial-template.txt
scripts/tests/: conftest.py
scripts/vhs/: demo.tape
src/wtf_windows/: __init__.py  __main__.py  _version.py  cli.py  importer.py  loader.py  mode.py
src/wtf_windows/lib/: __init__.py
src/wtf_windows/lib/ai/: __init__.py  analyzer.py
src/wtf_windows/lib/ai/backends/: __init__.py  claude.py  codex.py  prompt_only.py
src/wtf_windows/lib/core_lib/: __init__.py  protocols.py  types.py
src/wtf_windows/lib/help_lib/: __init__.py  content_registry.py  core.py  formatters.py
src/wtf_windows/lib/log_lib/: __init__.py  channels.py  hints.py  levels.py  manager.py  trace.py
src/wtf_windows/lib/ps1/: __init__.py  runner.py
src/wtf_windows/templates/: python_tool.py.tmpl  wtf.json.tmpl
tests/: test_smoke.py  test_version.py
tests/one-offs/: README.md
tests/one-offs/locked/: investigate_screen_lock.ps1  lock_deep_dive.ps1
tools/core/locked/: .wtf.json  __init__.py  channels.py  locked.py  render.py
tools/core/locked/docs/: event-reference.md
tools/core/locked/engine/: __init__.py  investigator.py  verdict.py
tools/core/locked/prompts/: diagnose.md
tools/core/locked/ps1/: investigate_locks.ps1
vhs/: minimal-cmd.tape  minimal.tape
